--- a/pom.xml
+++ b/pom.xml
@@ -240,6 +240,14 @@
         </configuration>
         <version>2.2</version>
       </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+                <source>6</source>
+                <target>6</target>
+            </configuration>
+        </plugin>
     </plugins>
   </build>
 </project>
