--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,7 +1,6 @@
 
 # DEBUG < INFO < WARN < ERROR < FATAL
-log4j.rootLogger=DEBUG, stdout
-
+log4j.logger.com.mchange.v2.async.ThreadPoolAsynchronousRunner=INFO
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
